#35954: ListView.setShowParentNode