@@ -44,6 +44,7 @@ package org.openide.explorer.view;
 import java.lang.ref.WeakReference;
 import java.util.LinkedList;
 import java.util.List;
+import javax.swing.tree.TreeNode;
 import org.netbeans.junit.NbTestCase;
 import org.openide.nodes.AbstractNode;
 import org.openide.nodes.Children;
@@ -60,6 +61,7 @@ public class NodeListModelTest extends NbTestCase {
         super(name);
     }
 
+    @Override
     protected boolean runInEQ() {
         return true;
     }
@@ -114,6 +116,24 @@ public class NodeListModelTest extends NbTestCase {
         // childrenCount
         model.getSize();
     }
+
+    public void testIsRootIncluded() {
+        Node c = new AbstractNode(new CNodeChildren());
+        NodeListModel model = new NodeListModel();
+        model.setNode(c, true);
+
+        assertEquals(NO_OF_NODES + 1, model.getSize());
+
+        assertNode("Parent is first", c, model.getElementAt(0));
+        for (int i= 0; i < NO_OF_NODES; i++) {
+            assertNode(i + "th node", c.getChildren().getNodeAt(i), model.getElementAt(i + 1));
+        }
+    }
+
+    private static void assertNode(String msg, Node n, Object e) {
+        TreeNode v = Visualizer.findVisualizer(n);
+        assertEquals(msg, v, e);
+    }
     
     /*
      * Children for testNodesAreReferenced.
@@ -122,12 +142,13 @@ public class NodeListModelTest extends NbTestCase {
         public CNodeChildren() {
             List myKeys = new LinkedList();
             for (int i = 0; i < NO_OF_NODES; i++) {
-                myKeys.add(new Integer(i));
+                myKeys.add(Integer.valueOf(i));
             }
             
             setKeys(myKeys);
         }
         
+        @Override
         protected Node[] createNodes(Object key) {
             AbstractNode an = new AbstractNode(Children.LEAF);
             an.setName(key.toString());
